todolist- add task done

--- a/01_Todolist/index.html
+++ b/01_Todolist/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
+    <div class="topPart" id="topPart">
         <input type="text" placeholder="Enter Your Task" id="taskIn">
+        <button id="add">Add</button>
+    </div>
+    <div class="storage" id="store">
+        <ul class="list" id="class">
+
+        </ul>
     </div>
 </body>
+<script src="control.js"></script>
 </html>
