--- a/01_Todolist/index.html
+++ b/01_Todolist/index.html
@@ -16,6 +16,12 @@
 
         </ul>
     </div>
+    <footer>
+        <div>
+            <a href="https://github.com/rf104" style="color:aliceblue; text-decoration: none">👋 Sajedullah Aref</a>
+            
+        </div>
+    </footer>
 </body>
 <script src="control.js"></script>
 </html>
